--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -74,8 +74,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Dutch: {{t+|nl|bel|f}}
 * Esperanto: {{t|eo|bobelo}}
 * Estonian: {{t|et|mull}}
-* {{trreq|ee}}
-* {{trreq|ext}}
+* {{trreq|fo}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
 * {{trreq|fur}}
@@ -85,25 +84,20 @@ Partly imitative, also influenced by {{term|burble}}.
 * Greek: {{t+|el|φυσαλίδα|f|tr=fysalída|sc=Grek}}
 * Gujarati: {{t|gu|છેતરપિંડી|f|tr=chētarapiṇḍī|sc=Gujr}}, {{t|gu|બબલ|f|tr=babala|sc=Gujr}}
 * {{trreq|ha}}
-* {{trreq|haw}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Hindi: {{t|hi|बुल्ला|m|tr=bullā|sc=Deva}}
 * Hungarian: {{t+|hu|buborék}}
 * Icelandic: {{t|is|kúla|f}}
 * Ido: {{t|io|bulo}}
-* {{trreq|ig}}
 * Indonesian: {{t|id|buih}}
 * {{trreq|ia}}
 * {{trreq|ie}}
 * Irish: {{t|ga|boilgeog|f}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{t|ja|泡|tr=あわ, awa|sc=Jpan}}, {{t|ja|泡立つ|tr=あわだつ, awadatsu|sc=Jpan}}, {{t|ja|バブル|tr=baburu|sc=Jpan}}
-* {{trreq|jv}}
 * Kannada: {{t|kn|ಮರಳು|tr=maraḷu|sc=Knda}}
 * {{trreq|kk}}
 * Khmer: {{t|km|ពងទឹក|tr=pɔɔng tɨk|sc=Khmr}}
-* {{trreq|rw}}
-* {{trreq|rn}}
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 {{trans-mid}}
 * Kurdish:
@@ -113,7 +107,6 @@ Partly imitative, also influenced by {{term|burble}}.
 * Latin: {{t-|la|bulla|f}}
 * Latvian: {{t+|lv|burbulis|m}}
 * Lithuanian: {{t|lt|burbulas|f}}
-* {{trreq|lg}}
 * {{trreq|lb}}
 * Macedonian: {{t-|mk|меур|m|tr=méur}}
 * Malay: {{t-|ms|buih}}
@@ -121,7 +114,6 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|mr}}
 * {{trreq|mwl}}
 * {{trreq|ne}}
-* {{trreq|new}}
 * Norwegian: {{t-|no|bubla|f}}
 * {{trreq|nov}}
 * {{trreq|oc}}
@@ -132,7 +124,6 @@ Partly imitative, also influenced by {{term|burble}}.
 * Polish: {{t+|pl|bańka|f}}
 * Portuguese: {{t+|pt|bolha|f}}
 * {{trreq|pa}}
-* {{trreq|raj}}
 * Romanian: {{t+|ro|balon|n}}, {{t-|ro|bășică|f}}, {{t-|ro|bulă|f}}
 * {{trreq|rm}}
 * Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}
@@ -164,11 +155,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{trreq|vo}}
 * {{trreq|wa}}
 * Welsh: {{t-|cy|bwrlwm|m}}, {{t-|cy|yswigen|f}}
-* {{trreq|wo}}
-* {{trreq|xh}}
 * Yiddish: {{t|yi|בלאָז|n|tr=blʼuáz|sc=Hebr}}
-* {{trreq|yo}}
-* {{trreq|zu}}
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
