t+rn:[[ku-zīkuruka]] t+rn:[[gu-sebura]] ([[WT:EDIT|Assisted]]) <bubble#18945008>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -98,6 +98,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Kannada: {{t|kn|ಮರಳು|tr=maraḷu|sc=Knda}}
 * {{trreq|kk}}
 * Khmer: {{t|km|ពងទឹក|tr=pɔɔng tɨk|sc=Khmr}}
+* Kirundi: {{t|rn|ku-zīkuruka}}, {{t|rn|gu-sebura}}
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 {{trans-mid}}
 * Kurdish:
