t+cmn:[[倒數]] t+cmn:[[倒数]] t+ru:[[обратный отсчёт]] t+ru:[[счёт в обратном направлении]] t+ru:[[обратный счёт]] t+he:[[ספירה לאחור]] t+ja:[[カウントダウン]] t-balance t+sl:[[odš... <countdown#18947272>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -20,19 +20,20 @@
 {{trans-top|A count backward to the time of some event}}
 * Bulgarian: {{t-|bg|отброяване|n}}
 * Chinese:
-*: Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
+*: Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]]), {{t|cmn|倒數|sc=Hani}}, {{t|cmn|倒数|tr=dàoshǔ|sc=Hani}}
 * Czech: {{t-|cs|odpočítávání|n}}
 * Dutch: [[aftelling]] {{f}}, [[aftellen]] {{n}}
 * Finnish: {{t+|fi|lähtölaskenta}}
 * French: {{t+|fr|compte à rebours|m}}, {{t|fr|décompte|m}}
 * German: {{t+|de|Countdown|m}}
+* Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}, {{t|he|ספירה לאחור|f|tr=sfira le'akhor|sc=Hebr}}
 {{trans-mid}}
-* Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}
 * Italian: {{t-|it|conto alla rovescia|m}}
+* Japanese: {{t|ja|カウントダウン|tr=kauntodaun|sc=Jpan}}
 * Macedonian: {{t-|mk|одбројување|n|tr=odbrojúvanje|sc=Cyrl}}
 * Portuguese: {{t-|pt|contagem regressiva}}
-* Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
-* Slovene: [[odštevanje]] {{n}}
+* Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}, {{t|ru|обратный отсчёт|m|tr=obrátnyj otsčót|sc=Cyrl}}, {{t|ru|счёт в обратном направлении|m|tr=sčot v obrátnom napravlénii|sc=Cyrl}}, {{t|ru|обратный счёт|tr=obrátnyj sčot|sc=Cyrl}}
+* Slovene: [[odštevanje]] {{n}}, {{t|sl|odštevanje|n}}
 * Spanish: [[cuenta atrás]] {{f}} {{qualifier|Spain}}, [[cuenta regresiva]] {{f}} {{qualifier|Latin America}}
 * Swedish: {{t+|sv|nedräkning|c}}
 {{trans-bottom}}
