--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -17,36 +17,36 @@
 # {{slang}} A radio or television [[program]] counting down the top songs of a given week, usually in reverse order ending with the No. 1.
 
 ====Translations====
-{{trans-top|A count backward to the time of some event}}
-* Bulgarian: {{t-|bg|отброяване|n}}
+{{trans-top|a count backward to the time of some event}}
+* Bulgarian: {{t-|bg|отброяване|n|tr=otbrojavane}}
 * Chinese:
-*: Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]]), {{t|cmn|倒數|sc=Hani}}, {{t|cmn|倒数|tr=dàoshǔ|sc=Hani}}
+*: Mandarin: {{t|cmn|倒數|sc=Hani}}, {{t|cmn|倒数|tr=dàoshǔ|sc=Hani}}
 * Czech: {{t-|cs|odpočítávání|n}}
 * Dutch: [[aftelling]] {{f}}, [[aftellen]] {{n}}
 * Finnish: {{t+|fi|lähtölaskenta}}
 * French: {{t+|fr|compte à rebours|m}}, {{t|fr|décompte|m}}
 * German: {{t+|de|Countdown|m}}
-* Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}, {{t|he|ספירה לאחור|f|tr=sfira le'akhor|sc=Hebr}}
+* Hebrew: {{t|he|ספירה לאחור|f|tr=sfira le'akhor|sc=Hebr}}
 {{trans-mid}}
 * Italian: {{t-|it|conto alla rovescia|m}}
 * Japanese: {{t|ja|カウントダウン|tr=kauntodaun|sc=Jpan}}
 * Macedonian: {{t-|mk|одбројување|n|tr=odbrojúvanje|sc=Cyrl}}
 * Portuguese: {{t-|pt|contagem regressiva}}
-* Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}, {{t|ru|обратный отсчёт|m|tr=obrátnyj otsčót|sc=Cyrl}}, {{t|ru|счёт в обратном направлении|m|tr=sčot v obrátnom napravlénii|sc=Cyrl}}, {{t|ru|обратный счёт|tr=obrátnyj sčot|sc=Cyrl}}
-* Slovene: [[odštevanje]] {{n}}, {{t|sl|odštevanje|n}}
-* Spanish: [[cuenta atrás]] {{f}} {{qualifier|Spain}}, [[cuenta regresiva]] {{f}} {{qualifier|Latin America}}
+* Russian: {{t|ru|отсчёт|m|tr=otsčót|sc=Cyrl}}, {{t|ru|обратный счёт|tr=obrátnyj sčot|sc=Cyrl}} / {{t|ru|обратный отсчёт|m|tr=obrátnyj otsčót|sc=Cyrl}}, {{t|ru|счёт в обратном направлении|m|tr=sčot v obrátnom napravlénii|sc=Cyrl}}, 
+* Slovene: {{t|sl|odštevanje|n}}
+* Spanish: {{t|es|cuenta atrás|f}} {{qualifier|Spain}}, {{t|es|cuenta regresiva|f}} {{qualifier|Latin America}}
 * Swedish: {{t+|sv|nedräkning|c}}
 {{trans-bottom}}
 
-{{trans-top|The acts of preparation carried out during this period}}
+{{trans-top|the acts of preparation carried out during this period}}
 * Dutch: {{t-|nl|aftelling|f}}
 * German: {{t-|de|Zeitkontrolle|f}}
 {{trans-mid}}
 * Portuguese: [[contagem regressiva]], [[retrocontagem]] {{f}}
-* Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
+* Russian: {{t|ru|обратный отсчёт|m|tr=obrátnyj otsčót|sc=Cyrl}}
 {{trans-bottom}}
 
-{{trans-top|A radio or television program counting down the top songs of a given week}}
+{{trans-top|a radio or television program counting down the top songs of a given week}}
 * French: {{t|fr|hit-parade|m}}, {{t|fr|top 50|m}}
 {{trans-mid}}
 * German: {{t+|de|Countdown|m}}
