t+nl:[[manie]] t-balance ([[WT:EDIT|Assisted]]) <mania#18950762>

--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -48,6 +48,7 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 * Catalan: {{t-|ca|mania|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|狂熱|sc=Hani}}, {{t|cmn|狂热|tr=kuángrè|sc=Hani}}
+* Dutch: {{t|nl|manie|f}}
 {{trans-mid}}
 * Finnish: {{t-|fi|mania}}
 * Greek: {{t+|el|μανία|f|tr=manía|sc=Grek}}
