t+vi:[[chảy máu]] ([[WT:EDIT|Assisted]]) <bleed#18954326>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -91,7 +91,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Tagalog: {{t-|tl|pagdugo}}
 * Thai: {{t-|th|ตกเลือด|tr=dtòk lêuat}}
 * Turkish: {{t+|tr|kanamak}} [-ar]
-* {{trreq|vi}}
+* Vietnamese: {{t|vi|chảy máu}}
 * Volapük: {{t+|vo|bludön}}
 * Welsh: {{t+|cy|gwaedu}}
 * West Frisian: {{t-|fy|bliede}}
