--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -45,7 +45,7 @@ From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|
 * Serbo-Croatian: [[zaloga]], [[zavet]], [[zavjet]], [[obećanje]], [[prisega]]
 * {{trreq|sk}}
 * Slovene: [[zapriseči]], [[zavezati se]], [[zaobljubiti se]]
-* Spanish: {{t+|es|prometer}}
+* Spanish: {{t+|es|prometer}}, {{t+|es|jurar}}
 * {{trreq|th}}
 * Vietnamese: {{t+|vi|cam kết}}, {{t+|vi|thề}}
 {{trans-bottom}}
@@ -59,6 +59,7 @@ From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|
 * Polish: {{t-|pl|złożyć zastaw}}
 * Russian: [[отдавать]] в [[залог]], [[закладывать]]
 * Slovene: [[zastaviti]]
+* Spanish: {{t+|es|hipotecar}}; {{t-|es|empeñar}}
 {{trans-bottom}}
 
 ===Noun===
@@ -102,7 +103,7 @@ From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|
 * Scottish Gaelic: {{t-|gd|gealltanas|m}}
 * Serbo-Croatian: {{t-|sh|zavet|m}}
 * Slovene: [[zaprisega]] {{f}}, [[zaobljuba]] {{f}}
-* Spanish: [[juramento]] {{m}}, [[promesa]] [[solemne]] {{f}}
+* Spanish: {{t+|es|juramento|m}}, [[promesa]] [[solemne]] {{f}}
 * Swedish: {{t-|sv|underpant|c}}
 * Telugu: [[ప్రతిజ్ఞ]] (prathigna), [[ప్రతిన]] (prathina)
 {{trans-bottom}}
@@ -115,23 +116,27 @@ From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|
 {{trans-mid}}
 * Portuguese: {{t+|pt|garantia|f}}
 * Russian: {{t+|ru|залог|m|tr=zalóg}}
+* Spanish: {{t+|es|garantía|f}}
 * Telugu: [[తనఖా]] (tanakhaa)
 {{trans-bottom}}
 
 {{trans-top|person who has taken a pledge of allegiance to a fraternity}}
 * Dutch: {{t+|nl|schacht}}
-{{trans-mid}}
 * Finnish: {{t-|fi|kokelas}}
+{{trans-mid}}
+* Spanish: {{t-|es|iniciado|m}}, {{t-|es|iniciada|f}}
 {{trans-bottom}}
 
 {{trans-top|drinking toast}}
 * Finnish: {{t-|fi|maljapuhe}}
 {{trans-mid}}
+* Spanish: {{t+|es|brindis|m}}
 {{trans-bottom}}
 
 {{trans-top|promise to abstain from drinking alcohol}}
 * Finnish: {{t-|fi|raittiuslupaus}}
 {{trans-mid}}
+* Spanish: {{t+|es|juramento|m}}, {{t-|es|manda|f}}
 {{trans-bottom}}
 
 [[ang:pledge]]
