t+nds:[[Kanink]] t-balance t+nds:[[Kaninken]] ([[WT:EDIT|Assisted]]) <rabbit#18954669>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -117,6 +117,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Latvian: {{t|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
 * Lojban: {{t-|jbo|ractu}}
+* Low German: {{t|nds|Kanink|m|n}}, {{t|nds|Kaninken|m|n}}
 {{trans-mid}}
 * Lower Sorbian: {{t|dsb|karnikel}}
 * {{trreq|lb}}
