--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -82,12 +82,12 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Galician: {{t|gl|coello|m}}
 * {{trreq|Gamilaraay}}
 * Georgian: {{t-|ka|ბოცვერი|tr=botc'veri|sc=Geor}}
-* German: {{t+|de|Kaninchen|n}}, {{t+|de|Karnickel|n}} {{qualifier|colloquial}}
+* German: {{t+|de|Kaninchen|n}}, {{t+|de|Karnickel|n}} {{qualifier|colloquial}}, {{t-|de|Schlappohr|n}} {{qualifier|humorous}}
 * Goguryeo: {{tø|zkg|烏斯含|tr=eosaham}}
 * Greek: {{t+|el|κουνέλι|n|tr=kounéli}}
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
 * Gujarati: {{t|gu|સસલું|tr=sasluṃ}}
-* Hebrew: {{t+|he|ארנב|m|tr=arnáv}}
+* Hebrew: {{t+|he|ארנב|m|alt=אַרְנָב|tr=arnáv}}, {{t-|he|ארנבת|f|alt=אַרְנֶבֶת|tr=arnévet}}
 * Hindi: {{t-|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t-|hi|शशक|m|tr=śaśak|sc=Deva}}
 * Hopi: {{tø|hop|taavo}}
 * Hungarian: {{t+|hu|nyúl}}
@@ -117,9 +117,9 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Latvian: {{t|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
 * Lojban: {{t-|jbo|ractu}}
-* Low German: {{t|nds|Kanink|m|n}}, {{t|nds|Kaninken|m|n}}
-* Lower Sorbian: {{t|dsb|karnikel}}
+* Low Saxon (Low German): {{t-|nds|Kanink|m|n}}, {{t-|nds|Kaninken|m|n}}
 {{trans-mid}}
+* Lower Sorbian: {{t|dsb|karnikel}}
 * {{trreq|lb}}
 * Macedonian: {{t|mk|заjак|m|tr=zajak}}
 * Malay:
