--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -102,7 +102,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Galician: {{t+|gl|porco|m}}
 * Georgian: {{t+|ka|ღორი|tr=ḡori|sc=Geor}}
 * German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t-|de|Hausschwein|n}}
-* Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}, {{t+|el|χοίρος|m|tr=choíros}}
+* Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
 ** Ancient Greek: {{t|grc|ὗς|tr=hūs}}
 * Hawaiian: {{tø|haw|puaʻa}}
 * Hebrew: {{t+|he|חזיר|m|tr=khazír|sc=Hebr}}, {{t-|he|חֲזִיר|m|tr=khazír|sc=Hebr}}
