--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -19,7 +19,7 @@
 {{trans-bottom}}
 
 {{trans-top|Please turn over}}
-* Dutch: {{t|nl|Z.O.Z}}
+* Dutch: {{t|nl|Z.O.Z.}}
 * French: {{t+|fr|TSVP}}
 {{trans-mid}}
 {{trans-bottom}}
