# {{intransitive}} To [[huddle]] or [[lie]] [[together]] like pigs, in one [[bed]]. <!--Webster 1913--> <pig#18987505>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -370,6 +370,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 #: ''They were '''pigging''' on the free food at the bar.
 #* '''2009''', Thomas Pynchon, ''Inherent Vice'', Vintage 2010, p. 349:
 #*: "Wow, Doc. That's heavy." Denis sat there '''pigging''' on the joint as usual.
+# {{intransitive}} To [[huddle]] or [[lie]] [[together]] like pigs, in one [[bed]]. <!--Webster 1913-->
 
 ===Etymology 2===
 Shortening of {{term|pigeon}}
