--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -62,7 +62,10 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Afrikaans: {{t-|af|weer}}, {{t-|af|alweer}}
 * Arabic: {{t-|ar|مرة أخرى|f|tr=márra(tan) ʾúxrā}}, {{t-|ar|كرة أخرى|f|tr=kárra(tan) ʾúxrā}} {{qualifier|adverbial accusative used}}, {{t-|ar|ثانية|tr=ṯāniyatan|alt=ثانيةً|sc=Arab}}
 *: Egyptian Arabic: {{tø|arz|تاني|tr=tani|sc=Arab}}, {{tø|arz|كمان|tr=kaman - kman|sc=Arab}}
+* {{trreq|an}}
 * Armenian: {{t-|hy|էլի|tr=ēli}}, {{t-|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t-|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t-|hy|նորեն|tr=noren}}
+* {{trreq|ast}}
+* {{trreq|az}}
 * Basque: {{t-|eu|berriro}}
 * Belarusian: {{t-|be|зноў|tr=znoŭ|sc=Cyrl}}, {{t-|be|яшчэ раз|tr=jaščé raz|sc=Cyrl}}
 * Bengali: {{t-|bn|আবার|tr=abar|sc=Beng}}
@@ -80,6 +83,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Dutch: {{t+|nl|opnieuw}}, {{t+|nl|nogmaals}}, {{t+|nl|weer}}, {{t+|nl|alweer}}, {{t+|nl|wederom}}
 * Esperanto: {{t-|eo|denove}}, {{t-|eo|ree}}
 * Estonian: {{t+|et|jälle}}
+* {{trreq|fo}}
 * Finnish: {{t+|fi|taas}}, {{t+|fi|uudelleen}}, {{t+|fi|jälleen}}, {{t-|fi|toistamiseen}}, {{t-|fi|vielä kerran}}
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Georgian: {{t-|ka|ხელახლა|tr=xelaxla|sc=Geor}}, {{t-|ka|კვლავ|tr=kvlav|sc=Geor}}, {{t-|ka|ისევ|tr=isev|sc=Geor}}
@@ -114,6 +118,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Nahuatl: {{t-|nah|occeppa}}
 * Navajo: {{tø|nv|nááná}}
 * Norwegian: {{t+|no|igjen}}
+* {{trreq|oc}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
 * Persian: {{t+|fa|دگربار|tr=degarbâr}}, {{t+|fa|دوباره|tr=do-bâre|sc=fa-Arab}}, {{t+|fa|باز|tr=bâz|sc=fa-Arab}}
 * Polish: {{t+|pl|ponownie}}, {{t+|pl|znowu}}, {{t-|pl|jeszcze raz}}
@@ -131,7 +136,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Spanish: {{t-|es|otra vez}}, {{t+|es|de nuevo}}
 * Swedish: {{t+|sv|igen}}, {{t+|sv|ånyo}}, {{t+|sv|åter}}, {{t+|sv|på nytt}}, {{t+|sv|å nyo}}
 * Tagalog: {{t-|tl|muli}}, {{t-|tl|nanaman}}, {{t-|tl|ulit}}
-* Telugu: {{t+|te|మళ్లీ|tr=mallee}}, {{t-|te|మరలా|tr=maralaa}}
+* Telugu: {{t+|te|మళ్లీ|tr=maḷlī}}, {{t-|te|మరలా|tr=maralā}}
 * Thai: {{t+|th|อีก|tr=èek}},  {{t+|th|ใหม่|tr=mài}}
 * Tok Pisin: {{t-|tpi|gen}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t+|tr|yine}}, {{t+|tr|bir daha}}
