--- a/en/a/apicomplexan.746642.wikitext
+++ b/en/a/apicomplexan.746642.wikitext
@@ -4,3 +4,8 @@
 {{en-adj|-}}
 
 # Describing [[protist]]s of the phylum ''[[Apicomplexa]]''
+
+===Noun===
+{{en-noun}}
+
+# Any [[protist]] of the phylum ''[[Apicomplexa]]''.
