--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -85,7 +85,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Dutch: {{t+|nl|opnieuw}}, {{t+|nl|nogmaals}}, {{t+|nl|weer}}, {{t+|nl|alweer}}, {{t+|nl|wederom}}
 * Esperanto: {{t-|eo|denove}}, {{t-|eo|ree}}
 * Estonian: {{t+|et|jälle}}
-* {{trreq|fo}}
+* Faroese: {{t|fo|aftur}}, {{t|fo|umaftur}}
 * Finnish: {{t+|fi|taas}}, {{t+|fi|uudelleen}}, {{t+|fi|jälleen}}, {{t-|fi|toistamiseen}}, {{t-|fi|vielä kerran}}
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Georgian: {{t-|ka|ხელახლა|tr=xelaxla|sc=Geor}}, {{t-|ka|კვლავ|tr=kvlav|sc=Geor}}, {{t-|ka|ისევ|tr=isev|sc=Geor}}
