--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -76,7 +76,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Bulgarian: {{t+|bg|отново|tr=otnovo}}, {{t+|bg|пак|tr=pak}}, {{t+|bg|отново|tr=otnovo|sc=Cyrl}}, {{t+|bg|пак|tr=pak|sc=Cyrl}}
 * Burmese: {{t-|my|နောက်တဖန်|sc=Mymr|tr=nauktăhpan}}
 * Catalan: {{t-|ca|una altra vegada}}, {{t-|ca|de nou}}
-* {{trreq|Cherokee}}
+* Cherokee: {{t|chr|ᎠᏏᏇ|tr=asique|sc=Cher}}
 * Chinese:
 *: Mandarin: {{qualifier|of future events}} {{t-|cmn|再|tr=zài|sc=Hani}}, {{qualifier|of past events}} {{t-|cmn|又|tr=yòu|sc=Hani}}, {{qualifier|once again}} {{t-|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn|sc=Hani}}, {{t-|cmn|重新|tr=chóngxīn|sc=Hani}}
 * Crimean Tatar: {{tø|crh|kene}}
@@ -103,8 +103,8 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Irish: {{t+|ga|arís}}
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
 * Japanese: {{t+|ja|又}}, {{t+|ja|また|tr=mata}}, {{t-|ja|再び|tr=ふたたび, futatabi}}, {{t-|ja|もう一度|tr=mō ichido}}, {{t+|ja|あらためて|tr=aratamete}}
-* {{trreq|kn}}
 {{trans-mid}}
+* {{trreq|kn}}
 * Khmer: {{t+|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t-|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
 * Korean: {{t+|ko|다시|tr=dasi|sc=Kore}}, {{t+|ko|또|tr=tto|sc=Kore}}
 * Kurdish:
