--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia|dab=thing}}
 
 ===Etymology===
-From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{etyl|gem-pro|en}} {{recons|þingan|lang=gem-pro}}; compare German {{term|Ding|lang=de}}, Danish and Norwegian {{term|ting}}. The word originally meant "assembly", then came to mean a specific issue discussed at such an assembly, and ultimately came to mean most broadly "an object". Compare the Latin {{term|res|rēs|lang=la}}, also meaning ''legal matter''. Modern use to refer to a Germanic assembly is likely influenced by cognates (from the same Proto-Germanic root) like {{etyl|non|-}} {{term|þing||lang=non|tr=thing}}, {{etyl|sv|-}} {{term|ting|lang=sv}}, and {{etyl|goh|-}} {{term|ding|lang=goh}} with this meaning.
+From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{etyl|gem-pro|en}} {{recons|þingan|lang=gem-pro}}; compare German {{term|Ding|lang=de}}, Swedish, Danish and Norwegian {{term|ting}}. The word originally meant "assembly", then came to mean a specific issue discussed at such an assembly, and ultimately came to mean most broadly "an object". Compare the Latin {{term|res|rēs|lang=la}}, also meaning ''legal matter''. Modern use to refer to a Germanic assembly is likely influenced by cognates (from the same Proto-Germanic root) like {{etyl|non|-}} {{term|þing||lang=non|tr=thing}}, {{etyl|sv|-}} {{term|ting|lang=sv}}, and {{etyl|goh|-}} {{term|ding|lang=goh}} with this meaning.
 
 ===Pronunciation===
 * {{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{X-SAMPA|/TIN/}}
