--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -11,19 +11,23 @@
 * {{homophones|wait}}
 
 ===Noun===
-{{wikipedia|weight}}
 {{en-noun}}
+{{pedia}}
 
 # The [[force]] on an object due to the gravitational attraction between it and the Earth (or whatever astronomical object it is primarily influenced by).
 # An object used to make something [[heavier]].
 # A [[standardized]] block of [[metal]] used in a [[balance]] to measure the [[mass]] of another object.
-# [[importance|Importance]] or [[influence]]
+# [[importance|Importance]] or [[influence]].
+#*{{quote-book|year=1897|author=[[w:Winston Churchill (novelist)|Winston Churchill]]
+|title=[[w:The Celebrity|The Celebrity]]
+|chapter=1|url=http://openlibrary.org/works/OL2341853W
+|passage=I liked the man for his own sake, and even had he promised to turn out a celebrity it would have had no '''weight''' with me. I look upon notoriety with the same indifference as on the buttons on a man's shirt-front, or the crest on his note-paper.}}
 #* '''1907''' Alonso de Espinosa, Hakluyt Society & Sir Clements Robert Markham, ''The Guanches of Tenerife: the holy image of Our Lady of Candelaria, and the Spanish conquest and settlement,'' Printed for the Hakluyt Society, p116
 #*: Another knight came to settle on the island, a man of much '''weight''' and position, on whom the Adelantados of all the island relied, and who was made a magistrate.
 #* '''1945''' Mikia Pezas, ''The price of liberty,'' I. Washburn, Inc., p11
 #*: "You surely are a man of some '''weight''' around here," I said.
 # {{weightlifting}} A [[disc]] of [[iron]], [[dumbbell]], or [[barbell]] used for training the [[muscle]]s.
-#: ''He's working out with '''weights'''.''
+#* He's working out with '''weights'''.
 # {{physics}} [[mass|Mass]] ([[net weight]], [[atomic weight]], [[molecular weight]], [[troy weight]], [[carat weight]], etc.).
 # {{statistics}} A variable which multiplies a value for ease of statistical manipulation.
 # {{topology}} The smallest cardinality of a base.
