--- a/en/n/NRFB.746558.wikitext
+++ b/en/n/NRFB.746558.wikitext
@@ -3,11 +3,10 @@
 ==={{initialism}}===
 '''NRFB''' 
 
-# {{business}} '''"Never Removed From Box."'''
+# Never removed from box.
 
 ====Usage notes====
 In catalogs and online stores, this is used in the [[context]] of [[collectibles]]; collectibles never removed from their box retain more value.
 
 ===References===
-* [http://www.urbandictionary.com/define.php?term=nrfb Urban Dictionary: NRFB]<br/>
 * [http://antiques.about.com/od/valuationtips/a/aa092099.htm About.com: Valuing Antiques and Collectibles]
