/* Translations */ fi <weight#19066471>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -208,6 +208,7 @@
 
 ====Translations====
 {{trans-top|add weight}}
+* Finnish: [[lisätä#Finnish|lisätä}} {{t|fi|paino|alt=painoa}}
 * French: {{t+|fr|alourdir}}, {{t+|fr|lester}}, {{t+|fr|appesantir}}
 * German: {{t+|de|beschweren}}
 {{trans-mid}}
@@ -240,6 +241,7 @@
 {{trans-bottom}}
 
 {{trans-top|to handicap a horse}}
+* Finnish: [[lisätä#Finnish|lisätä}} {{t|fi|paino}}
 {{trans-mid}}
 {{trans-bottom}}
 
