/* Noun */ fi translations <weight#19067123>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -116,7 +116,7 @@
 * Telugu: [[బరువు]] (baruvu)
 {{trans-bottom}}
 
-{{trans-top|measuring weights}}
+{{trans-top|standardized measuring weight}}
 * Arabic: {{t-|ar|ثقل|m|tr=ṯiql|sc=Arab}}
 * Armenian: {{t-|hy|կշռաքար|tr=kšṙak'ar}}
 * Chinese:
@@ -136,9 +136,14 @@
 * Turkish: {{t+|tr|ağırlık}}
 {{trans-bottom}}
 
-{{trans-top|sport device}}
+{{trans-top|importance or influence}}
+* Finnish: {{t|fi|painoarvo}}, {{t|fi|merkitys}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|weight for training muscles}}
 * Arabic: {{t-|ar|ثقل|m|tr=ṯiql|sc=Arab}}
-* Finnish: {{t+|fi|paino}}, {{t+|fi|puntti}}
+* Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|poids|m}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t-|el|βάρη|n|p|tr=vári}}
@@ -175,7 +180,7 @@
 * Turkish: {{t+|tr|ağırlık}}
 {{trans-bottom}}
 
-{{trans-top|statistics: statistical value}}
+{{trans-top|statistics: multiplier}}
 * Arabic: {{t+|ar|وزن|alt=وَزْن|tr=wazn}}
 * Armenian: {{t-|hy|կշիռ|tr=kšiṙ}}
 * Chinese:
@@ -187,6 +192,27 @@
 * Japanese: {{t-|ja|重さ|tr=omosa}}, {{t-|ja|重み|tr=omomi}}
 * Russian: {{t+|ru|вес|m|tr=ves|sc=Cyrl}}
 * Scots: {{tø|sco|weicht}}
+{{trans-bottom}}
+
+{{trans-top|topology: the smallest cardinality of a base}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|typography: boldness of a font}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|line weight}}
+* Finnish: {{t|fi|paksuus}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|illusion of mass}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|thickness and opacity of paint}}
+{{trans-mid}}
 {{trans-bottom}}
 
 {{checktrans-top}}
