--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -47,6 +47,7 @@ From {{term|bend}}.
 * German: {{t-|de|gebeugt}}
 * Hungarian: {{t-|hu|hajlott}}, {{t+|hu|görbe}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|шык}} {{t+|ky|шыктуулук}} {{t+|ky|адат}} {{t+|ky|өнөкөт}} {{t+|ky|ынта}} {{t+|ky|кунт}} {{t+|ky|умтулуу}} {{t+|ky|тырышуу}} {{t+|ky|ийри-буйру}} {{t+|ky|бурулуш}} {{t+|ky|кайрылыш}} {{t+|ky|ийретүү}}{{t+|ky|ийрейүү}} {{t+|ky|кыйшайуу}} {{t+|ky|эңкейиш}} {{t+|ky|бүкчүйгөн}} {{t+|ky|бүкчүйгөн}}{{t+|ky|жантайма}} {{t+|ky|кыйшык}} {{t+|ky|ийилген}} {{t+|ky|умтулган}} {{t+|ky|тилек}}  {{t+|ky|ынтызарлык}} {{t+|ky|куштарлык}}{{t+|ky|чабынды}} {{t+|ky|шалбаа}} {{t+|ky|талаа}} {{t+|ky|муундуу}} {{t+|ky|муунактуу}}
 * Romanian: {{t-|ro|gârbov}}
 * Russian: {{t+|ru|согнутый|tr=sógnutyj|sc=Cyrl}}, {{t+|ru|изогнутый|tr=izógnutyj|sc=Cyrl}}, {{t+|ru|гнутый|tr=gnútyj|sc=Cyrl}}
 * Scottish Gaelic: {{t-|gd|lùbach}}
@@ -176,6 +177,7 @@ From {{etyl|fa|tr}} {{fa-Arab|[[بند]]}} (''band'').
 [[hy:bent]]
 [[io:bent]]
 [[kn:bent]]
+[[ky:bent]]
 [[ku:bent]]
 [[lt:bent]]
 [[li:bent]]
