--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -123,6 +123,8 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Breton: [[da#Breton|da]]
 * Bulgarian: {{t|bg|в|tr=v|sc=Cyrl}}
 * Catalan: [[a]]
+* Chinese:
+*: Mandarin: {{qualifier|no preposition is uzed, e.g.:}} {{Hani|[[五]][[點鐘]]}}, {{Hani|[[五]][[点钟]]}} (wǔ diǎnzhōng) or {{Hani|[[五]][[點]]}}, {{Hani|[[五]][[点]]}} (wǔ diǎn) "at five o'clock"
 * Czech: {{t+|cs|v}}
 * Danish: {{t-|da|på}}
 * Dutch: {{t+|nl|om}}
@@ -135,8 +137,8 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 * Interlingua: [[a#Interlingua|a]]
 * Italian: {{t+|it|a}}
 * Japanese: {{t|ja|に|tr=...ni|alt=...に|sc=Jpan}}
-* Korean: {{t|ko|에|tr=...e|alt=...에|sc=Kore}}
 {{trans-mid}}
+* Korean: {{t|ko|에|tr=...e|alt=...에|sc=Kore}}
 * Kurdish:
 *: Kurmanji: [[li]]
 *: Sorani: ([[le]])
