--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -91,7 +91,7 @@ From {{etyl|enm}} {{term|sir|lang=enm}}, from {{etyl|fro}} {{term|sire||master, 
 {{trans-bottom}}
 
 ===Verb===
-{{en-verb}}
+{{en-verb|sirr|ed}}
 
 # to address somebody using sir
 #: ''Please don't '''sir''' me!''
