/* Tahitian */ was fwotd <mania#19159254>

--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -149,11 +149,14 @@ From {{etyl|grc|la}} {{term|μανία|lang=grc}}.
 ----
 
 ==Tahitian==
+{{was fwotd|2013|January|5}}
+===Pronunciation===
+* {{IPA|/maˈni.a/|lang=ty}}
 
 ===Adjective===
 {{head|ty|adjective}}
 
-# {{weather|lang=ty}}, {{context|sea}} [[calm]]
+# {{context|of the sea or|_|weather|lang=ty}} [[calm]]
 # {{figuratively|lang=ty}} [[serene]], [[calm]], [[tranquil]], [[peaceful]] (state of mind)
 # [[dull]]
 
