/* Proper noun */ <ישראל#19159943>

--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -14,9 +14,10 @@
 [[Image:Flag_of_Israel.svg|thumb|right|דגל ישראל]]
 {{he-proper noun|wv=יִשְׂרָאֵל|g=m|tr=Yisra'él}}
 
-# the [[patriarch]] [[Israel]]
+# [[Israel]], {{gloss|the alternative name of [[Jacob]]}}
 # the [[child|children]] of [[Israel]], the [[Jewish]] [[people]]
-# the [[state]] of [[Israel]], both [[ancient]] and [[modern]]
+# the [[State of Israel]]
+# the [[Kingdom of Israel]]
 # {{given name|male|lang=he}}, [[Israel]]
 
 ====Related terms====
