--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -62,13 +62,17 @@ From the prefix [[mega-]].
 {{ordinalbox|eo||1,000,000a||card=meg}}
 
 ===Etymology===
-From {{term|meg}}
+{{suffix|meg|a|lang=eo}}.
 
 ===Ordinal number===
 {{eo-adj}}
 
-# {{ordinal|lang=eo}} alternative form of [[miliona]]
+# {{ordinal|lang=eo}} [[millionth]]
 
+====Synonyms====
+* {{l|eo|miliona}}
+
+[[Category:Esperanto numerals]]
 ----
 
 ==Faroese==
