--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -30,10 +30,12 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Albanian: {{t-|sq|qelbësi}}
 * Armenian: {{t-|hy|ժանտաքիս|tr=žantak'is}}
 * Basque: {{t-|eu|ipurtats}}
-* Belarusian: {{t-|be|тхор лясны}}, {{t-|be|тхор чорны}}
+* Belarusian: {{t-|be|тхор лясны}}, {{t-|be|тхор чорны}}, {{t|be|тхор|m|tr=txor|sc=Cyrl}}
 * Breton: {{t-|br|pudask}}
 * Bulgarian: {{t+|bg|прът|tr=prăt|f}}
 * Catalan: {{t+|ca|turó}}
+* Chinese:
+*: Mandarin: {{t|cmn|艾虎|tr=àihǔ|sc=Hani}}
 * Czech: {{t+|cs|tchoř|m}}
 * Danish: {{t-|da|ilder}}
 * Dutch: {{t+|nl|bunzing|m}}
@@ -48,12 +50,13 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Hungarian: {{t+|hu|görény}}
 * Irish: {{t-|ga|cat coille|m}}, {{t-|ga|toghán|m}}
 * Italian: {{t-|it|puzzola|f}}
+* Japanese: {{t|ja|ヨーロッパケナガイタチ|tr=Yōroppa kenagaitachi|sc=Jpan}}
 * Latgalian: {{tø|ltg|saskys|m}}
 * Latin: {{t-|la|mustella}}
 * Latvian: {{t-|lv|sesks}}
 * Lithuanian: {{t+|lt|šeškas}}
-* Lower Sorbian: {{tø|dsb|twoŕ}}
 {{trans-mid}}
+* Lower Sorbian: {{tø|dsb|twoŕ}}
 * Macedonian: {{t-|mk|обичен твор|tr=običen tvor}}
 * Navajo: {{tø|nv|tó wónaanídę́ę́ʼ dlǫ́ʼii}}
 * Norwegian: {{t-|no|ilder}}
@@ -63,7 +66,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Romani: {{tø|rom|mutsa-kandini|f}}
 * Romanian: {{t-|ro|dihor}}
 * Romansch: {{t-|rm|telpi}}
-* Russian: {{t+|ru|хорёк|tr=xorjók|m}}, {{t+|ru|хорь|m|tr=xor'}}
+* Russian: {{t+|ru|хорёк|tr=xorjók|m}}, {{t+|ru|хорь|m|tr=xor'}}, {{t|ru|хорь чёрный|m|tr=xorʹ čórnyj|sc=Cyrl}}
 * Sami: [[čáhppesbuoidda]]<!--sic, Sami is several languages-->
 * Sardinian: {{t-|sc|pùtzola}}
 * Scottish Gaelic: {{t-|gd|feòcallan}}
