--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -14,8 +14,9 @@
 * Dalmatian: {{tø|dlm|capraina|f}}
 * Finnish: {{t+|fi|kuttu}}
 * German: {{t+|de|Ziege|f}},  {{t+|de|Geiß|f}}, {{t+|de|Zicke|f}}, {{t-|de|Zibbe|f}}
-{{trans-mid}}
+* Hebrew: {{t|he|עז|sc=Hebr}}
 * Low German: {{t-|nds|Zeeg|f}}, {{t-|nds|Zääg|f}}, {{t-|nds|Seeg|f}}, {{t-|nds|Sääg|f}}
+{{trans-mid}}
 * Macedonian: {{t-|mk|коза|f|tr=koza}}
 * Old Church Slavonic: {{tø|cu|коза|f|tr=koza|sc=Cyrl}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|kapar}}, {{qualifier|♂}} {{t+|vo|hikapar}}, {{qualifier|♀}} {{t+|vo|jikapar}}
