--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -38,6 +38,7 @@ From {{etyl|fr|en}} {{term|mouflon|lang=fr}}, from {{etyl|it|-}} {{term|muflone|
 * Italian: {{t+|it|muflone|m}}
 * Japanese: {{t-|ja|ムフロン|sc=Jpan|tr=mufuron}}
 * Ladin: {{tø|lld|muflon}}
+* Latin: {{t|la|musimo|m|alt=mūsimō}}
 * Latvian: {{t-|lv|muflons}}
 * Lithuanian: {{t+|lt|muflonas}}
 {{trans-mid}}
