Reverted edits by [[Special:Contributions/90.63.122.103|90.63.122.103]], restoring last version by [[User:Rukhabot|Rukhabot]]. If you think this rollback is in error, please leave a message on [[User talk:Metaknowledge|my talkpage]]. <species#19204401>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -195,7 +195,7 @@ From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix si
 {{top2}}
 * English: {{l|en|species}}
 * French: {{l|fr|espèce}}, {{l|fr|épice}}
-* German: {{l|de|spezies}}
+* German: {{l|de|Spezies}}
 * Italian: {{l|it|specie}}
 {{mid2}}
 * Portuguese: {{l|pt|espécie}}
