--- a/en/m/marled.746944.wikitext
+++ b/en/m/marled.746944.wikitext
@@ -1,6 +1,18 @@
 ==English==
+===Etymology 1===
+From a contracted form of {{term|marble}} {{suffix||ed}}.
 
-===Verb===
+====Adjective====
+{{en-adj}}
+
+# {{chiefly|Scotland}} [[mottled|Mottled]], [[streaked]], [[multicoloured]].
+#*'''1932''', {{w|Lewis Grassic Gibbon}}, ''Sunset Song'', Polygon 2006 (''A Scots Quair''), p. 49:
+#*:The Standing Stones reared up above the two, '''marled''' and streaked with snow they were, and a wind came blowing fit to freeze the chilblains on a brass monkey as they stood and glowered one at the other.
+
+===Etymology 2===
+From {{suffix|marl|ed}}.
+
+====Verb====
 '''marled'''
 
 # {{past of|marl}}
