--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -48,6 +48,9 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 #: ''Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.''
 # {{pejorative}} a person who is obese to the extent of resembling a pig (the animal)
 
+=====Descendants=====
+* Abenaki: {{l|abe|piks}} {{qualifier|from "pigs"}}
+
 =====Translations=====
 {{trans-top|mammal of genus ''Sus''}}
 * Abau: {{tø|aau|huok}}
