--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -50,6 +50,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 
 =====Descendants=====
 * Abenaki: {{l|abe|piks}} {{qualifier|from "pigs"}}
+* Malecite-Passamaquoddy: {{l|pqm|piks}} {{qualifier|from "pigs"}}
 
 =====Translations=====
 {{trans-top|mammal of genus ''Sus''}}
