t+km:[[ប្រភេទ]] t-balance ([[WT:EDIT|Assisted]]) <species#19298371>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -81,8 +81,9 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Finnish: {{t+|fi|laji}}
 * French: {{t+|fr|espèce|f}}
 * German: {{t+|de|Gattung|f}}
-* Macedonian: {{t-|mk|вид|m|tr=vid|sc=Cyrl}}
+* Khmer: {{t|km|ប្រភេទ|tr=prɑpʰeit|sc=Khmr}}
 {{trans-mid}}
+* Macedonian: {{t-|mk|вид|m|tr=vid|sc=Cyrl}}
 * Norwegian: {{t+|no|art|m}}
 * Polish: {{t+|pl|gatunek|m}}
 * Portuguese: {{t+|pt|espécie}}
