--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -127,9 +127,9 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Japanese: [[吹く]] ([[ふく]], fuku)
 * Korean: [[불다]] (bulda)
 * Kurdish:
-* Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t-|ky|айдап кийирүү}}, {{t-|ky|жел чыгаруу}},{{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}},{{t-|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
 *: Sorani: {{ku-Arab|[[فو]]}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t-|ky|айдап кийирүү}}, {{t-|ky|жел чыгаруу}},{{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}}, {{t-|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
 * Latgalian: {{tø|ltg|pyust}}
 * Latin: {{t-|la|flo}}, {{t-|la|sufflo}}
 * Latvian: {{t+|lv|pūst}}
@@ -141,7 +141,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Rapa Nui: {{tø|rap|puhi}}
 * Romanian: {{t-|ro|sufla}}
 * Romansch: {{t-|rm|sufflar}}
-* Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf.}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf.}} ''blow the nose''
+* Russian: {{t|ru|дуть|tr=dut'}} {{impf}}, {{t|ru|дунуть|tr=dúnut'}} {{pf.}}; {{t|ru|сморкаться|tr=smorkát's'a}} {{impf}}, {{t|ru|сморкнуться|tr=smorknút's'a}} {{pf.}} ''blow the nose''
 * Scottish Gaelic: {{t-|gd|sèid}}
 * Sicilian: [[ciusciari]]
 * Slovene: {{t+|sl|pihati}}
@@ -162,7 +162,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 * Korean: [[불다]] (bulda)
 * Polish: [[zdmuchnąć]]
-* Russian: [[сдувать]] (sduvát') {{impf}}, [[сдуть]] (sdut') {{pf.}}
+* Russian: {{t|ru|сдувать|tr=sduvát'}} {{impf}}, {{t|ru|сдуть|tr=sdut'}} {{pf.}}
 * Scottish Gaelic: {{t-|gd|sèid}}
 * Vietnamese: {{t+|vi|thở}}, {{t+|vi|thổi}}
 {{trans-bottom}}
@@ -190,7 +190,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 {{trans-mid}}
 * Macedonian: {{t-|mk|дува|tr=dúva}}
 * Romanian: {{t-|ro|umfla}}
-* Russian: [[выдувать]] (vyduvát') {{impf}}, [[выдуть]] (výdut') {{pf.}}
+* Russian: {{t|ru|выдувать|tr=vyduvát'}} {{impf}}, {{t|ru|выдуть|tr=výdut'}} {{pf.}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|thổi}}
 {{trans-bottom}}
@@ -229,14 +229,14 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Dutch: {{t+|nl|springen}}, {{t+|nl|ontploffen}}
 * Finnish: {{t-|fi|räjähtää}}
 * French: {{t+|fr|exploser}}
-* German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
+* German: {{t|de|hochgehen}}, [[in]] [[die]] [[Luft]] {{t|de|gehen}}, {{t|de|explodieren}}
 * Hebrew: {{t-|he|התפוצץ|tr=hitpotzétz}}
 {{trans-mid}}
 * Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
 * Korean: [[터지다]] (teojida)
 * Macedonian: {{t-|mk|се распрснува|tr=se rasp'rsnuva}}
 * Portuguese: {{t+|pt|explodir}}
-* Russian: [[взрываться]] (vzryvát's'a) {{impf}}, [[взорваться]] (vzorvát's'a) {{pf.}}, [[взлетать на воздух]] (vzletát' na vózduχ) {{impf}}, [[взлететь на воздух]] (vzlet'ét' na vózduχ) {{pf.}}
+* Russian: {{t|ru|взрываться|tr=vzryvát's'a}} {{impf}}, {{t|ru|взорваться|tr=vzorvát's'a}} {{pf.}}, {{t|ru|взлетать на воздух|tr=vzletát' na vózduz}} {{impf}}, {{t|ru|взлететь на воздух|tr=vzlet'ét' na vózdux}} {{pf.}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|nổ}}
 {{trans-bottom}}
@@ -278,7 +278,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * French: {{t+|fr|claquer}}, {{t+|fr|flamber}}
 {{trans-mid}}
 * Korean: [[날리다]] (nallida)
-* Russian: [[продувать]] (produvát') {{impf}}, [[продуть]] (prodút') {{pf.}}
+* Russian: {{t|ru|продувать|tr=produvát'}} {{impf}}, {{t|ru|продуть|tr=prodút'}} {{pf.}}
 * Spanish: {{t+|es|cagar}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: [[xài phí]], [[phung phí]]
