--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -50,6 +50,7 @@
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
 * Japanese: {{t-|ja|調整|tr=ちょうせい, chōsei|sc=Jpan}}, {{t+|ja|調節|tr=ちょうせつ, chōsetsu|sc=Jpan}}
 * {{trreq|ko}}
+* Kyrgyz: {{t+|ky|жөнгө салуу}}, {{t+|ky|ыңгайлаштыруу}}, {{t-|ky|ылайыктоо}}
 * Latin: {{t-|la|accommodatio|f|alt=accommodātiō}}
 * Polish: {{t+|pl|ustawienie|n}}, {{t-|pl|regulacja|f}}
 * Portuguese: [[ajustamento]] {{m}}, [[ajuste]] {{m}}
@@ -61,7 +62,6 @@
 * Telugu: [[సర్దుబాటు]]
 * {{trreq|tpn}}
 * Turkish: {{t+|tr|ayarlama}}, {{t+|tr|ayar}}
-* Kyrgyz: {{t+|ky|жөнгө салуу}}, {{t+|ky|ыңгайлаштыруу},{{t-|ky|ылайыктоо}}
 * Welsh: {{t-|cy|cyweiriad|m}}
 {{trans-bottom}}
 
