--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -9,7 +9,7 @@
 ===={{initialism}}====
 '''BX'''
 
-# {{US|military}} [[Base Exchange]] of the U.S. [[Air Force]].
+# {{US|military}} {{w|Base Exchange}} of the U.S. [[Air Force]].
 #: ''Despite the reduced price of goods at the '''BX''', everything is of high quality''.
 
 ===Etymology 2===
