--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -63,7 +63,7 @@
 * Malayalam: {{t-|ml|തോല്‍]]|tr=thOl}}
 * Mongolian: {{t-|mn|савхи|tr=savkhi|sc=Cyrl}}
 * Norwegian Bokmål: {{t-|nb|lær|n}}
-* Ojibwe: {{tø|oj|ashkwegin}}
+* Ojibwe: {{tø|oj|bashkwegin}}
 * Old Church Slavonic: {{tø|cu|кожа|f|tr=koža|sc=Cyrs}}
 * Old Persian: {{tø|peo|čarman-|sc=Xpeo}}
 * Persian: {{t+|fa|چرم|tr=čarm}}
