--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -13,6 +13,7 @@ Literally "beyond the river [[Dniester]]".
 ===Proper noun===
 {{en-proper noun}}
 
+# {{historical}} A [[governorate]] of [[Romania]] during [[World War II]], established in 1941 and captured by Soviet forces in 1944.
 # An [[autonomous]] [[territory]] within [[Moldova]], not [[internationally]] [[recognized]] as a [[nation]]. It is the only part of Moldova in which the [[Cyrillic alphabet]] is official, while the [[Latin alphabet]] is generally "restricted".
 
 {{-}}
