--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -30,7 +30,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Albanian: {{t-|sq|qelbësi}}
 * Armenian: {{t-|hy|ժանտաքիս|tr=žantak'is}}
 * Basque: {{t-|eu|ipurtats}}
-* Belarusian: {{t-|be|тхор лясны}}, {{t-|be|тхор чорны}}, {{t|be|тхор|m|tr=txor|sc=Cyrl}}
+* Belarusian: {{t-|be|тхор лясны|m|tr=txor ljasný}}, {{t-|be|тхор чорны|m|tr=txor čórny}}, {{t|be|тхор|m|tr=txor|sc=Cyrl}}
 * Breton: {{t-|br|pudask}}
 * Bulgarian: {{t+|bg|прът|tr=prăt|f}}
 * Catalan: {{t+|ca|turó}}
@@ -66,7 +66,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Romani: {{tø|rom|mutsa-kandini|f}}
 * Romanian: {{t-|ro|dihor}}
 * Romansch: {{t-|rm|telpi}}
-* Russian: {{t+|ru|хорёк|tr=xorjók|m}}, {{t+|ru|хорь|m|tr=xorʹ}}, {{t|ru|хорь чёрный|m|tr=xorʹ čórnyj|sc=Cyrl}}
+* Russian: {{t+|ru|хорёк|tr=xorjók|m}}, {{t+|ru|хорь|m|tr=xorʹ}}, {{t|ru|хорь чёрный|m|tr=xorʹ čórnyj|sc=Cyrl}}, {{t|ru|хорь лесной|m|tr=xorʹ lesnój|sc=Cyrl}}
 * Sami: [[čáhppesbuoidda]]<!--sic, Sami is several languages-->
 * Sardinian: {{t-|sc|pùtzola}}
 * Scottish Gaelic: {{t-|gd|feòcallan}}
@@ -78,7 +78,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Spanish: {{t-|es|turón|m}}
 * Swedish: {{t+|sv|iller}}
 * Turkish: {{t+|tr|kokarca}}
-* Ukrainian: {{t-|uk|тхiр лiсовий|tr=txir lisovyj}}, {{t-|uk|тхiр чорний|tr=txir čornyj}}
+* Ukrainian: {{t-|uk|тхiр лiсовий|m|tr=txir lisovýj}}, {{t-|uk|тхiр чорний|m|tr=txir čórnyj}}
 * Upper Sorbian: {{t-|hsb|tchór}}
 * Walloon: {{t+|wa|vexhåd}}
 * Welsh: {{t-|cy|ffwlbart}}
