/* Preposition */ another definition <at#19312106>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -45,7 +45,9 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 #: ''It is growing '''at''' the rate of 3% a year.''
 #: ''Cruising along '''at''' fifty miles per hour.''
 # In a state of.
-#: ''She is '''at''' [[sixes and sevens]] with him.''
+#: ''She is [[at sixes and sevens|'''at''' sixes and sevens]] with him.''
+#: ''They are [[at loggerheads|'''at''' loggerheads]] over how best to tackle the fiscal cliff.''
+#: ''The city was [[at the mercy of|'''at''' the mercy of]] the occupying forces.''
 
 
 ====Usage notes====
