--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -167,7 +167,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * {{trreq|mk}}
 * Malay: {{t-|ms|mudah}}
 * {{trreq|ml}}
-* {{trreq|gv}}
+* Manx: {{t|gv|oney}}, {{t|gv|macaintagh}}, {{t|gv|neuchialgagh}}
 * {{trreq|mr}}
 * Mirandese: {{tø|mwl|lhano}}
 * {{trreq|ne}}
@@ -225,9 +225,10 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * Dutch: {{t+|nl|achterlijk}}, {{t+|nl|simpel}}
 * French: {{t+|fr|simple|m|f}}
 * German: {{t+|de|einfach}}
+* Manx: {{t|gv|meecheeayllagh}}, {{t|gv|neuchreeney}}, {{t|gv|giare-cheeayllagh}}
 * Polish: {{t+|pl|prostak}} ''(noun)''
-* Romanian: {{t-|ro|simplu}}
 {{trans-mid}}
+* Romanian: {{t-|ro|simplu}}
 * Russian: {{t+|ru|простой|m|tr=prostój}}, {{t+|ru|простодушный|m|tr=prostodúšnyj}}
 * Scottish Gaelic: {{t-|gd|baoth}}
 * Serbo-Croatian:
