--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -75,7 +75,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 {{trans-mid}}
 * Norwegian: {{t+|no|purk|m}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
-* Russian: {{t-|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t+|ru|лягавый|m|tr=ljagávyj}} / {{t+|ru|легавый|m|tr=legávyj}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}},   {{t+|ru|фараон|m|tr=faraón}} {{qualifier|slang, dated}}, {{t|ru|полицай|m|tr=policáj|sc=Cyrl}}
+* Russian: {{t-|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t+|ru|лягавый|m|tr=ljagávyj}} / {{t+|ru|легавый|m|tr=legávyj}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}},   {{t+|ru|фараон|m|tr=faraón}} {{qualifier|slang, dated}}, {{t|ru|полицай|m|tr=policáj|sc=Cyrl}} {{qualifier|slang}}
 * Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
 * Spanish: {{t-|es|tombo|m}}, {{t+|es|paco|m}}
 * Swedish: {{t+|sv|snut}}
