t+ru:[[схватить]] t-balance ([[WT:EDIT|Assisted]]) <cop#19354171>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -37,8 +37,9 @@ Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|
 =====Translations=====
 {{trans-top|to capture, to take ''(informal)''}}
 * Bulgarian: [[хващам]], [[пипвам]], [[арестувам]]
-{{trans-mid}}
 * Greek: {{t+|el|παίρνω|tr=paírno|sc=Grek}}
+{{trans-mid}}
+* Russian: {{t|ru|схватить|tr=sxvatítʹ|sc=Cyrl}}
 {{trans-bottom}}
 
 =====Derived terms=====
