--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -5,7 +5,7 @@
 From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 
 ===Pronunciation===
-* {{IPA|/kwɑː/|/kweɪ/}}
+* {{IPA|/kwɑː/|/big 'ol hairy dick/}}
 * {{rhymes|eɪ}}
 
 ===Adverb===
