t+ru:[[белое золото]] t-balance t+pt:[[ouro branco]] t+es:[[oro blanco]] t+de:[[Weißgold]] t+fr:[[or blanc]] t+cmn:[[白金]] t+ja:[[ホワイトゴールド]] ([[WT:EDIT|Assisted]]) <white gold#19357105>

--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -10,12 +10,19 @@
 
 ====Translations====
 {{trans-top|A precious metal alloy consisting of gold and a platinum group metal}}
+* Chinese:
+*: Mandarin: {{t|cmn|白金|tr=báijīn|sc=Hani}}
 * Finnish: {{t-|fi|valkokulta}}
+* French: {{t|fr|or blanc|m}}
+* German: {{t|de|Weißgold|n}}
 * Hungarian: {{t+|hu|fehérarany}}
 * Italian: {{t-|it|oro bianco|m}}
 {{trans-mid}}
+* Japanese: {{t|ja|ホワイトゴールド|tr=howaitogōrudo|sc=Jpan}}
 * Persian: {{t|fa|طلا سفید|tr=talâ-sefid|sc=fa-Arab}}
-* Portuguese: [[ouro branco]]
+* Portuguese: [[ouro branco]], {{t|pt|ouro branco|m}}
+* Russian: {{t|ru|белое золото|n|tr=béloje zóloto|sc=Cyrl}}
+* Spanish: {{t|es|oro blanco|m}}
 * Swedish: {{t-|sv|vitguld|n}}
 {{trans-bottom}}
 
