--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -20,7 +20,7 @@
 {{trans-mid}}
 * Japanese: {{t|ja|ホワイトゴールド|tr=howaitogōrudo|sc=Jpan}}
 * Persian: {{t|fa|طلا سفید|tr=talâ-sefid|sc=fa-Arab}}
-* Portuguese: [[ouro branco]], {{t|pt|ouro branco|m}}
+* Portuguese: {{t|pt|ouro branco|m}}
 * Russian: {{t|ru|белое золото|n|tr=béloje zóloto|sc=Cyrl}}
 * Spanish: {{t|es|oro blanco|m}}
 * Swedish: {{t-|sv|vitguld|n}}
