--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -16,7 +16,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|莙薘菜|sc=Hani}}, {{t|cmn|莙薘菜|tr=tǐngdácài|sc=Hani}}, {{t|cmn|葉用甜菜|sc=Hani}}, {{t|cmn|叶用甜菜|tr=yèyòngtiáncài|sc=Hani}}, {{t|cmn|牛皮菜|tr=niúpícài|sc=Hani}}, {{t|cmn|豬乸菜|sc=Hani}}, {{t|cmn|猪乸菜|tr=zhūnǎcài|sc=Hani}}
 {{trans-mid}}
-* {{trreq|Finnish}}
+* Finnish: {{t|fi|lehtimangoldi}}
 * Hungarian: {{t+|hu|mángold}}
 * Romanian: {{t-|ro|mangold|m}}
 {{trans-bottom}}
