--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -15,10 +15,14 @@
 {{trans-top|an edible leafy vegetable}}
 * Chinese:
 *: Mandarin: {{t|cmn|莙薘菜|sc=Hani}}, {{t|cmn|莙薘菜|tr=tǐngdácài|sc=Hani}}, {{t|cmn|葉用甜菜|sc=Hani}}, {{t|cmn|叶用甜菜|tr=yèyòngtiáncài|sc=Hani}}, {{t|cmn|牛皮菜|tr=niúpícài|sc=Hani}}, {{t|cmn|豬乸菜|sc=Hani}}, {{t|cmn|猪乸菜|tr=zhūnǎcài|sc=Hani}}
-{{trans-mid}}
 * Finnish: {{t|fi|lehtimangoldi}}
+* French: {{t|fr|poirée|f}}, {{t|fr|blette|f}}, {{t|fr|bette|f}}, {{t|fr|jotte|f}}
+* German: {{t|de|Mangold|m}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|mángold}}
+* Japanese: {{t|ja|フダンソウ|tr=fudansō|sc=Jpan}}, {{t|ja|不断草|tr=ふだんそう, fudansō|sc=Jpan}}, {{t|ja|スイスチャード|tr=Suisuchādo|sc=Jpan}}
 * Romanian: {{t-|ro|mangold|m}}
+* Russian: {{t|ru|мангольд|m|tr=mangólʹd|sc=Cyrl}}
 {{trans-bottom}}
 
 [[Category:en:Vegetables]]
