t+xnt:[[mishánneke]] ([[WT:EDIT|Assisted]]) <squirrel#19360965>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -93,6 +93,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 *: Rumi: {{t-|ms|tupai}}, {{t-|ms|bajing}}
 *: Jawi: {{t-|ms|توڤاي|sc=Arab}}, {{t-|ms|باجيڠ|sc=Arab}}
 * Maltese: {{t-|mt|skwiril|m}}
+* Narragansett: {{tø|xnt|mishánneke}}
 * Navajo: {{tø|nv|tseekʼi nástánii}}
 * Norwegian: {{t+|no|ekorn|n}}
 * Occitan: {{t+|oc|esquiròl|m}}
