--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -11,14 +11,14 @@
 * {{homophones|wait}}
 
 ===Noun===
+{{wikipedia}}
 {{en-noun}}
-{{pedia}}
 
 # The [[force]] on an object due to the gravitational attraction between it and the Earth (or whatever astronomical object it is primarily influenced by).
 # An object used to make something [[heavier]].
 # A [[standardized]] block of [[metal]] used in a [[balance]] to measure the [[mass]] of another object.
 # [[importance|Importance]] or [[influence]].
-#*{{quote-book|year=1897|author=[[w:Winston Churchill (novelist)|Winston Churchill]]
+#* {{quote-book|year=1897|author=[[w:Winston Churchill (novelist)|Winston Churchill]]
 |title=[[w:The Celebrity|The Celebrity]]
 |chapter=1|url=http://openlibrary.org/works/OL2341853W
 |passage=I liked the man for his own sake, and even had he promised to turn out a celebrity it would have had no '''weight''' with me. I look upon notoriety with the same indifference as on the buttons on a man's shirt-front, or the crest on his note-paper.}}
@@ -35,8 +35,6 @@
 # {{context|visual art}} The relative thickness of a drawn [[rule]] or painted [[brushstroke]], [[line weight]].
 # {{context|visual art}} The [[illusion]] of [[mass]].
 # {{context|visual art}} The [[thickness]] and [[opacity]] of [[paint]].
-
-: ''Compare to'' [[mass]].
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''weight'' (noun)}}
@@ -59,7 +57,7 @@
 ====Translations====
 {{trans-top|force due to gravity}}
 * Arabic: {{t+|ar|وزن|alt=وَزْن|tr=wazn}}
-* Armenian: {{t-|hy|կշիռ|tr=kšiṙ}},  {{t-|hy|քաշ|tr=k’aš}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
+* Armenian: {{t-|hy|կշիռ|tr=kšiṙ}}, {{t-|hy|քաշ|tr=k’aš}}, {{t-|hy|ծանրություն|tr=çanrut’yun}}
 * Belarusian: {{t-|be|вага|f|tr=váha|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|重量|tr=zhòngliàng|sc=Hani}}
@@ -87,7 +85,7 @@
 * Scots: {{tø|sco|weicht}}
 * Scottish Gaelic: {{t-|gd|cudrom|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
-* Telugu: [[భారము]] (bhaaramu),  {{t+|te|బరువు|tr=baruvu}}
+* Telugu: [[భారము]] (bhaaramu), {{t+|te|బరువు|tr=baruvu}}
 * Turkish: {{t+|tr|ağırlık}}
 * Ukrainian: {{t+|uk|вага|f|tr=váha|sc=Cyrl}}
 * Vietnamese: {{t+|vi|trọng lượng}} ({{t-|vi|重量}})
@@ -95,7 +93,7 @@
 
 {{trans-top|object to make something heavier}}
 * Arabic: [[ثقل]]
-* Armenian: {{t+|hy|բեռ|tr=beṙ}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
+* Armenian: {{t+|hy|բեռ|tr=beṙ}}, {{t-|hy|ծանրություն|tr=çanrut’yun}}
 * Chinese:
 *: Mandarin: {{t|cmn|配重|tr=pèizhòng|sc=Hani}}
 * Czech: {{t-|cs|závaží|n}}
@@ -188,7 +186,7 @@
 *: Mandarin: {{t|cmn|權重|sc=Hani}}, {{t|cmn|权重|tr=quánzhòng|sc=Hani}}
 * Finnish: {{t-|fi|painokerroin}}, {{t+|fi|paino}}
 {{trans-mid}}
-* Hungarian: {{t+|hu|súly}},  {{t-|hu|súlyozás}}
+* Hungarian: {{t+|hu|súly}}, {{t-|hu|súlyozás}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t-|ja|重さ|tr=omosa}}, {{t-|ja|重み|tr=omomi}}
 * Russian: {{t+|ru|вес|m|tr=ves|sc=Cyrl}}
