--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -65,7 +65,7 @@
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t-|eo|pezo}}
 * Estonian: {{t-|et|kaal}}
-* Ewe: [[kpekpeme]] {{n}}
+* Ewe: {{t|ee|kpekpeme|n}}
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|poids}}
 * German: {{t+|de|Gewicht|n}}
@@ -85,14 +85,14 @@
 * Scots: {{tø|sco|weicht}}
 * Scottish Gaelic: {{t-|gd|cudrom|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
-* Telugu: [[భారము]] (bhaaramu), {{t+|te|బరువు|tr=baruvu}}
+* Telugu: {{t|te|భారము|tr=bhaaramu|sc=Telu}}, {{t+|te|బరువు|tr=baruvu}}
 * Turkish: {{t+|tr|ağırlık}}
 * Ukrainian: {{t+|uk|вага|f|tr=váha|sc=Cyrl}}
 * Vietnamese: {{t+|vi|trọng lượng}} ({{t-|vi|重量}})
 {{trans-bottom}}
 
 {{trans-top|object to make something heavier}}
-* Arabic: [[ثقل]]
+* Arabic: {{t|ar|ثقل|sc=Arab}}
 * Armenian: {{t+|hy|բեռ|tr=beṙ}}, {{t-|hy|ծանրություն|tr=çanrut’yun}}
 * Chinese:
 *: Mandarin: {{t|cmn|配重|tr=pèizhòng|sc=Hani}}
@@ -112,7 +112,7 @@
 * Russian: {{t+|ru|груз|m|tr=gruz}}
 * Scots: {{tø|sco|weicht}}
 * Swedish: {{t+|sv|vikt|c}}
-* Telugu: [[బరువు]] (baruvu)
+* Telugu: {{t|te|బరువు|tr=baruvu|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|standardized measuring weight}}
@@ -121,7 +121,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|砝碼|sc=Hani}}, {{t|cmn|砝码|tr=fámǎ|sc=Hani}}
 * Estonian: {{t-|et|kaaluma}}
-* Finnish: [[punnus]]
+* Finnish: {{t|fi|punnus}}
 * French: {{t+|fr|poids|m}}
 * Greek: {{t+|el|ζύγι|n|tr=zíγi}}, {{t+|el|σταθμά|n|p|tr=staθmá}}, {{t-|el|σταθμίον|n|tr=staθmíon}}
 {{trans-mid}}
@@ -215,8 +215,8 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|id}}: [[berat]]
-* {{ttbc|es}}: [[peso]] {{m}}
+* {{ttbc|id}}: {{t|id|berat}}
+* {{ttbc|es}}: {{t|es|peso|m}}
 {{trans-bottom}}
 
 ====Related terms====
@@ -256,7 +256,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|ponderare}}
 * Portuguese: {{t+|pt|ponderar}}
-* Romanian: [[a pondera]]
+* Romanian: {{t|ro|pondera}}
 * Swedish: {{t+|sv|vikta}}
 {{trans-bottom}}
 
