--- a/en/u/unsoundness.742255.wikitext
+++ b/en/u/unsoundness.742255.wikitext
@@ -1,18 +1,24 @@
 ==English==
 
 ===Etymology===
-From {{term|un-}} + {{term|sound}} + {{term|-ness}}.
+{{confix|un|sound|ness}}
 
 ===Noun===
 {{en-noun|-}}
-# The state of being [[unsound]].
+
+# the state of being [[unsound]]
 
 ====Antonyms====
-*[[soundness]]
+* [[soundness]]
 
 ====Related terms====
-*[[sound]]
-*[[unsound]]
+* [[sound]]
+* [[unsound]]
+
+====Translations====
+{{trans-top|the state of being unsound}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[de:unsoundness]]
 [[ko:unsoundness]]
