--- a/en/u/unsoundness.742255.wikitext
+++ b/en/u/unsoundness.742255.wikitext
@@ -17,6 +17,7 @@
 
 ====Translations====
 {{trans-top|the state of being unsound}}
+* Irish: {{t|ga|fabht|m}}, {{t|ga|fabhtacht|f}}
 {{trans-mid}}
 {{trans-bottom}}
 
