--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -72,6 +72,15 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 #: ''You '''bet'''!''
 # {{poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
 
+====Derived terms====
+{{rel-top3|Terms derived from ''bet'' (verb)}}
+* [[bet one's boots]]
+{{rel-mid3}}
+* [[bet one's bottom dollar]]
+{{rel-mid3}}
+* [[bet the farm]]
+{{rel-bottom}}
+
 =====Translations=====
 {{trans-top|To make a guess about the outcome of an event}}
 * Arabic: {{t-|ar|راهن|tr=raahana}}
