--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -64,10 +64,11 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Ido: {{t+|io|sangifar}}
 * Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
 * Interlingue: {{t-|ie|sanguar}}
-{{trans-mid}}
 * Irish: {{t-|ga|cuir fuil}}
+{{trans-mid}}
 * Italian: {{t+|it|sanguinare}}
 * Japanese: {{t-|ja|出血|alt=出血する|tr=しゅっけつする, shukketsu suru}}, [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
+* Jèrriais: {{tø|roa-jer|sangni}}
 * Khmer: {{t-|km|ចេញឈាម|tr=jeuñ chīəum}}
 * Korean: {{t-|ko|피를 흘리다|sc=Hang}}
 * Latin: {{t-|la|sanguinem mitto|alt=sanguinem mittō}}, {{t-|la|sanguino|alt=sanguinō}}
