--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -184,11 +184,12 @@
 * Friulian: {{tø|fur|šivîlâ}}
 * German: {{t+|de|pfeifen}}
 * Greek: {{t+|el|σφυρίζω|tr=sfyrízo|sc=Grek}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|fütyül}}
+{{trans-mid}}
 * Interlingua: {{t-|ia|sibilar}}
 * Irish: [[lig fead]]
 * Japanese: {{t-|ja|口笛を吹く|tr=くちぶえをふく, kuchibue-o fuku}}
+* Jèrriais: {{tø|roa-jer|sûfflier}}
 * Khmer: {{t+|km|ហួច|tr=houch|sc=Khmr}}
 * Latvian: {{t+|lv|svilpt}}
 * Occitan: {{t+|oc|siblar}}, {{t+|oc|fiular}}
