t+roa-jer:[[pathier]] ([[WT:EDIT|Assisted]]) <bet#19375452>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -105,7 +105,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Indonesian: {{t+|id|taruh}}
 * Italian: {{t-|it|scommettere}}
 * Japanese: {{t+|ja|賭ける}} ([[かける]], kakeru)
-* Jèrriais: {{tø|roa-jer|gagi}}
+* Jèrriais: {{tø|roa-jer|gagi}}, {{tø|roa-jer|pathier}}
 * Latvian: {{t-|lv|derēt}}
 * Norwegian: {{t-|no|vedde}}
 * Polish: {{t+|pl|postawić}}, {{t+|pl|zakładać się}}
