--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|ang}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{recons|wihtiz|lang=gem-pro}}, {{recons|wekhtiz|(ga)wekhtiz|lang=gem-pro}}.
+From {{etyl|ang}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{recons|wihtiz|lang=gem-pro}}, {{recons|wekhtiz|(ga)wekhtiz|lang=gem-pro}} (cf. {{recons|weganan|lang=gem-pro}}).
 
 ===Pronunciation===
 * {{IPA|/weɪt/}}
