--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -136,7 +136,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 *: Roman: {{t-|sh|opet}}, {{t-|sh|ponovo}}, {{t-|sh|snova}}, {{t-|sh|odnova}}
 * Sicilian: {{t+|scn|arreri}},  {{t+|scn|arrè}}
 * Slovak: {{t-|sk|opäť}}, {{t-|sk|zasa}}, {{t-|sk|znova}}, {{t-|sk|znovu}}
-* Slovene: {{t+|sl|spet}}, {{t-|sl|ponovno}}, {{t-|sl|znova}}
+* Slovene: {{t+|sl|spet|alt=spét}}, {{t-|sl|ponovno|alt=ponôvno}}, {{t-|sl|znova|alt=znôva}}
 * Spanish: {{t-|es|otra vez}}, {{t+|es|de nuevo}}, {{t+|es|nuevamente}}
 * Swedish: {{t+|sv|igen}}, {{t+|sv|ånyo}}, {{t+|sv|åter}}, {{t+|sv|på nytt}}, {{t+|sv|å nyo}}
 * Tagalog: {{t-|tl|muli}}, {{t-|tl|nanaman}}, {{t-|tl|ulit}}
