--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -17,7 +17,7 @@ From {{etyl|enm}} {{term|blo|lang=enm}}, {{term|bloo|lang=enm}}, from {{etyl|ang
 # {{context|now|_|chiefly|_|dialectal|Northern England}} [[blue|Blue]].
 
 ===Etymology 2===
-From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blāwan|to blow, breathe, inflate, sound|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|blēanan||to blow|lang=gem-pro}} (compare German {{term|blähen|lang=de}}), from {{etyl|ine-pro|en}} {{recons|bhle-|lang=ine-pro}} 'to swell, blow up' (compare Latin {{term|flare|lang=la}} 'to blow', Armenian {{term|bełun}} 'fertile').
+From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blāwan|to blow, breathe, inflate, sound|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|blēanan||to blow|lang=gem-pro}} (compare German {{term|blähen|lang=de}}), from {{etyl|ine-pro|en}} {{recons|bhle-|lang=ine-pro}} 'to swell, blow up' (compare Latin {{term|flare|lang=la}} 'to blow', Armenian {{term|bełun}} 'fertile', Albanian {{term|plas||to blow, explode|lang=sq}}).
 
 ====Verb====
 {{en-verb|blows|blowing|blew|blown}}
