--- a/en/s/siphonophore.801198.wikitext
+++ b/en/s/siphonophore.801198.wikitext
@@ -1,7 +1,13 @@
 ==English==
+{{rfi}}
+===Etymology===
+{{rfe}}
 
 ===Noun===
-{{wikipedia|Siphonophora}}
 {{en-noun}}
 
-# {{biology}} Any of various [[transparent]] [[marine]] [[hydrozoan]]s, of the order ''[[Siphonophora]]'', that float or swim as colonies of [[polyp]]s.
+# {{biology}} Any of various [[transparent]] [[marine]] [[hydrozoan]]s, of the order ''{{taxlink|Siphonophora|order}}'', that float or swim as colonies of [[polyp]]s.
+
+===See also===
+* {{pedia|Siphonophora}}
+* {{specieslite|Siphonophora Eschscholtz}}
