t+ga:[[saonta]] t+ga:[[macánta]] t+ga:[[gan chealg]] t+ga:[[simplí]] ([[WT:EDIT|Assisted]]) <simple#19444024>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -143,7 +143,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * {{trreq|id}}
 * {{trreq|ia}}
 * {{trreq|ie}}
-* {{trreq|ga}}
+* Irish: {{t|ga|simplí}}
 * Italian: {{t+|it|semplice}}
 * Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui|sc=Jpan}}
 * {{trreq|jv}}
@@ -225,6 +225,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * Dutch: {{t+|nl|achterlijk}}, {{t+|nl|simpel}}
 * French: {{t+|fr|simple|m|f}}
 * German: {{t+|de|einfach}}
+* Irish: {{t|ga|saonta}}, {{t|ga|macánta}}, {{t|ga|gan chealg}}
 * Manx: {{t-|gv|meecheeayllagh}}, {{t-|gv|neuchreeney}}, {{t-|gv|giare-cheeayllagh}}
 * Polish: {{t+|pl|prostak}} ''(noun)''
 {{trans-mid}}
