t+rm:[[simpel]] t+rm:[[sempel]] ([[WT:EDIT|Assisted]]) <simple#19444280>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -182,7 +182,7 @@ From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{
 * {{trreq|pa}}
 * {{trreq|raj}}
 * Romanian: {{t-|ro|simplu|m|n}}, {{t-|ro|necomplicat|m|n}}
-* {{trreq|rm}}
+* Romansch: {{t|rm|simpel}} {{qualifier|Rumantsch Grischun, Surmiran, Puter, Vallader}}, {{t|rm|sempel}} {{qualifier|Sursilvan, Sutsilvan}}
 * Russian: {{t+|ru|простой|m|tr=prostój}}, {{qualifier|easy}} {{t+|ru|лёгкий|tr=ljóxkij|sc=Cyrl}}
 * {{trreq|sco}}
 * Scottish Gaelic: {{t-|gd|sìmplidh}}
