Antonyms <in the know#19446378>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -46,6 +46,9 @@
 * {{trreq|vi}}
 {{trans-bottom}}
 
+====Antonyms====
+* [[in the dark]]
+
 [[Category:English prepositional phrases]]
 
 [[fr:in the know]]
