t+rm:[[danovamain]] t+rm:[[daniev]] t+rm:[[danovmeing]] t+rm:[[danievmeing]] t+rm:[[danovamaintg]] t+rm:[[danövmaing]] t+rm:[[danöv]] t+rm:[[puspè]] t+rm:[[puspei]] t+rm:[[puspe]] t+rm:[[darcho]] t+rm:[[darcheu]] ([[WT:EDIT|Assisted]]) <again#19449383>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -127,7 +127,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Polish: {{t+|pl|ponownie}}, {{t+|pl|znowu}}, {{t-|pl|jeszcze raz}}
 * Portuguese: {{t+|pt|de novo}}, {{t-|pt|outra vez}}, {{t+|pt|novamente}}
 * Romanian: {{t-|ro|iarăși}}, {{t-|ro|din nou}}
-* {{trreq|Romansch}}
+* Romansch: {{t|rm|danovamain}} {{qualifier|Rumantsch Grischun, Sursilvan}}, {{t|rm|daniev}} {{qualifier|Sursilvan}}, {{t|rm|danovmeing}}, {{t|rm|danievmeing}} {{qualifier|Sutsilvan}}, {{t|rm|danovamaintg}} {{qualifier|Surmiran}}, {{t|rm|danövmaing}}, {{t|rm|danöv}} {{qualifier|Puter, Vallader}}, {{t|rm|puspè}} {{qualifier|Rumantsch Grischun}}, {{t|rm|puspei}} {{qualifier|Sursilvan}}, {{t|rm|puspe}} {{qualifier|Sutsilvan, Surmiran}}, {{t|rm|darcho}} {{qualifier|Puter}}, {{t|rm|darcheu}} {{qualifier|Vallader}}
 * Russian: {{t+|ru|опять|tr=opját’}}, {{t+|ru|снова|tr=snóva}}, {{t-|ru|ещё раз|tr=ješčó raz|sc=Cyrl}}
 * Sanskrit: {{t-|sa|पुनः|tr=punaḥ|sc=Deva}}
 * Scottish Gaelic: {{t-|gd|a-rithist}}, {{t-|gd|às ùr}}
