rfe - This entry lacks etymological information. <bet#19449885>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -190,7 +190,7 @@ From {{etyl|he}} {{term|בית|tr=béyt}}
 ----
 
 ==Latvian==
-
+{{rfe|See also Lithuanian request.|lang=lv}}
 ===Conjunction===
 {{head|lv|conjunction}}
 
@@ -199,7 +199,7 @@ From {{etyl|he}} {{term|בית|tr=béyt}}
 ----
 
 ==Lithuanian==
-
+{{rfe|See also Latvian request.|lang=lt}}
 ===Pronunciation===
 * {{IPA|[bʲɛt]|lang=lt}}
 
