/* Usage notes */ <West Frisian#19466369>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -14,8 +14,7 @@
 # {{rfc-sense}} {{context|Netherlands}} A [[dialect]] spoken in [[West Friesland]] in the province of [[North Holland]], historically related to the language spoken in [[Friesland]].
 
 ====Usage notes====
-{{unreferenced}}
-* Frisian speakers consider Frisian to be a language group consisting of West Frisian, Saterland Frisian, and North Frisian; however, some linguists consider Frisian to be a single language, of which these are varieties.
+* The lects West Frisian, Saterland Frisian, and North Frisian are sometimes considered dialects of a single Frisian language, but more often they are considered a group of three independent languages.
 
 ====Translations====
 {{trans-top|language spoken in Friesland}}
