--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -150,7 +150,7 @@ From {{etyl|la|fr}} {{term|ructus}}.
 * {{audio|De-rot.ogg|audio}}
 
 ===Etymology===
-From {{etyl|gmh|de}} {{term|rot|rōt|lang=gmh|red, red-haired}}, from {{etyl|goh|de}} {{term|rot|rōt|lang=goh|red, scarlet, purple-red, brown-red, yellow-red}}, akin to Old Saxon ''rōd'', Old Dutch ''rōd'' (modern Dutch ''[[rood]]''); from {{etyl|gem-pro|de}} {{recons|raudaz|lang=gem-pro}}, from a Proto-Indo-European ''*reudʰ-''.
+From {{etyl|gmh|de}} {{term|rot|rōt|lang=gmh|red, red-haired}}, from {{etyl|goh|de}} {{term|rot|rōt|lang=goh|red, scarlet, purple-red, brown-red, yellow-red}}, akin to Old Saxon ''rōd'', Old Dutch ''rōd'' (modern Dutch ''[[rood]]''); from {{etyl|gem-pro|de}} {{recons|raudaz|lang=gem-pro}}, from {{etyl|ine-pro|de}} {{recons|h₁rewdʰ-|lang=ine-pro}}.
 
 ===Adjective===
 {{de-adj|röter|rötesten}}<br>
