--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -254,7 +254,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 {{sq-noun|g=m}}
 
 # [[a]] [[pond]], [[water]] [[reservoir]]
-# [[iddle]] [[or]] [[provocative]] [[words]]
+# [[idle]] [[or]] [[provocative]] [[words]]
 # [[servant]], [[henchman]] 
 
 =====Related terms===== 
