--- a/en/c/clarty.720310.wikitext
+++ b/en/c/clarty.720310.wikitext
@@ -1,7 +1,10 @@
 ==English==
 
+===Alternative forms===
+* {{l|en|clartie}}, {{l|en|clerty}}, {{l|en|clorty}}, {{l|en|clurty}} {{qualifier|Scotland}}
+
 ===Etymology===
-{{suffix|clart|y}}?
+From {{suffix|clart|y}}. 
 
 ===Adjective===
 {{en-adj|clart|ier}}
