t+hu:[[elmélet]] ([[WT:EDIT|Assisted]]) <theory#19547457>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -114,6 +114,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
 * Haitian Creole: {{tø|ht|teori}}
+* Hungarian: {{t|hu|elmélet}}
 * Irish: {{t-|ga|teoiric|f}}
 * Japanese: {{t+|ja|理論|tr=riron}}, {{t+|ja|学説|tr=gakusetsu}}
 {{trans-mid}}
