--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -435,10 +435,13 @@ From {{etyl|non|da}} {{term|pík|lang=non}}.
 
 ==Scots==
 
+===Etymology===
+{{rfe|lang=sco}}
+
 ===Noun===
 {{sco-noun}}
 
-# pig
+# [[#English|pig]]
 # [[pot]], [[jar]], [[earthenware]]
 
 ====Derived terms====
