t+roa-jer:[[vodka]] t-balance ([[WT:EDIT|Assisted]]) <vodka#19571897>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -56,10 +56,11 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 * Irish: {{t-|ga|vodca|m}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: {{t-|ja|ウォッカ|tr=uokka}}, {{t-|ja|ヴォートカ|tr=vōtoka}}
+* Jèrriais: {{tø|roa-jer|vodka|m}}
 * Kazakh: {{t|kk|водка|tr=vodka|sc=Cyrl}}
 * Korean: {{t+|ko|보드카|tr=bodeuka|sc=Hang}}
-* Kyrgyz: {{t-|ky|водка|tr=vodka|sc=Cyrl}}
 {{trans-mid}}
+* Kyrgyz: {{t-|ky|водка|tr=vodka|sc=Cyrl}}
 * Kölsch: {{tø|ksh|wodka}}
 * Latgalian: {{tø|ltg|braņdīņs}}
 * Latin: {{t-|la|vodca|f}}
