/* Adverb */ #* '''185?''', Charles Dickens, ''Bleak House''  #*: As he lies in the light before a glaring white target, the black upon him shines '''again'''{{...}} <again#19574510>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -34,7 +34,9 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 #* '''1603''', {{w|John Florio}}, translating Michel de Montaigne, ''Essays'', II.31:
 #*: So women are never angrie, but to the end a man should '''againe''' be angrie with them, therein imitating the lawes of Love.
 #* '''1621''', {{w|Robert Burton}}, ''The Anatomy of Melancholy'', I.2.4.vii:
-#*: Thus men are plagued with women, they '''again''' with men, when they are of diverse humours and conditions [...].
+#*: Thus men are plagued with women, they '''again''' with men, when they are of diverse humours and conditions {{...}}
+#* '''185?''', Charles Dickens, ''Bleak House''
+#*: As he lies in the light before a glaring white target, the black upon him shines '''again'''{{...}}
 # Another time; once more. {{defdate|from 14th c.}}
 #* '''1979''', Charles Edward Daniels et al., “The Devil Went Down to Georgia” (song), ''Million Mile Reflections'', Charlie Daniels Band, Epic Records:
 #*: Johnny said, “Devil, just come on back if you ever want to try '''again'''.”
