--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -1,5 +1,9 @@
 ==English==
 [[File:Asclepias_curassavica13.jpg|thumb|Tropical '''milkweed''' (plant), ''Asclepias curassavica''.]]
+{{wikipedia}}
+{{wikispecies}}
+===Etymology===
+{{compound|milk|weed}}
 
 ===Noun===
 {{en-noun}}
