/* Old Dutch */ <thing#19603479>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -265,6 +265,15 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 
 ----
 
+==Mizo==
+===Etymology===
+From [[w:Proto-Tibeto-Burman|Proto-Tibeto-Burman]] *siŋ
+===Noun===
+#[[tree]]
+#[[wood]]
+#[[firewood]]
+===Reference===
+*Matisoff, James A., ''Handbook of Proto-Tibeto-Burman'', University of California Press.
 ==Old Dutch==
 
 ===Etymology===
