--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -80,7 +80,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 ====Translations====
 {{trans-top|that which is considered to exist as a separate entity, object, quality or concept}}
 * Albanian: {{t+|sq|send|m}}
-* Arabic: {{t+|ar|شيء|m|tr=shay'|sc=Arab}}
+* Arabic: {{t+|ar|شيء|m|tr=šayʾ|sc=Arab}}
 * Armenian: {{t-|hy|իր|tr=ir}}, {{t+|hy|բան|tr=ban}}
 * Asturian: {{t-|ast|cosa|f}}
 * Basque: {{t-|eu|gauza}}
@@ -126,7 +126,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 * Polish: {{t+|pl|rzecz|f}}
 * Portuguese: {{t+|pt|coisa|f}}
 * Romanian: {{t-|ro|lucru|n}}
-* Russian: {{t+|ru|вещь|f|tr=vešč’|sc=Cyrl}}
+* Russian: {{t+|ru|вещь|f|tr=veščʹ|sc=Cyrl}}
 * Sanskrit: {{t-|sa|वस्तु|m|tr=vastu}}
 * Scottish Gaelic: {{t-|gd|rud|m}}
 * Serbo-Croatian:
