t+kk:[[нәрсе]] ([[WT:EDIT|Assisted]]) <thing#19605234>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -116,6 +116,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 * Italian: {{t+|it|cosa|f}}
 * Japanese: {{t+|ja|物|tr=[[もの]], mono|sc=Jpan}}
 {{trans-mid}}
+* Kazakh: {{t|kk|нәрсе|tr=närsä|sc=Cyrl}}
 * {{trreq|Khmer}}
 * Korean: {{t+|ko|물건|tr=mulgeon|sc=Kore}}
 * Lao: {{t|lo|ສິ່ງ|tr=sing|sc=Laoo}}
