t+cy:[[pedrongl]] ([[WT:EDIT|Assisted]]) <quadrilateral#19605457>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -60,6 +60,7 @@
 * Japanese: [[四辺形]]の (shihenkei no)
 * Russian: {{t+|ru|четырёхсторонний|tr=četyrjoxstorо́nnij|sc=Cyrl}}
 * Spanish: {{t+|es|cuadrilátero}}
+* Welsh: {{t|cy|pedrongl}}
 {{trans-bottom}}
 
 [[Category:en:Four]]
