t+ga:[[urrann]] t-balance ([[WT:EDIT|Assisted]]) <division#19626515>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -90,9 +90,10 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Finnish: {{t+|fi|osa}}
 * German: {{t+|de|Teil|m}}
 * Indonesian: {{t+|id|bagian}}
+* Irish: {{t|ga|urrann|f}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|به‌ش|sc=ku-Arab}}
-{{trans-mid}}
 * Macedonian: {{t-|mk|дел|m|tr=del|sc=Cyrl}}
 * Malay: {{t-|ms|bahagian}}
 * Malayalam: {{t+|ml|വിഭാഗം|tr=vibhaagam|sc=Mlym}}
