--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -48,19 +48,55 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 #: ''Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.''
 # {{pejorative}} a person who is obese to the extent of resembling a pig (the animal)
 
-=====Descendants=====
-* Abenaki: {{l|abe|piks}} {{qualifier|from "pigs"}}
-* Malecite-Passamaquoddy: {{l|pqm|piks}} {{qualifier|from "pigs"}}
-
 =====Synonyms=====
 {{checksyns}}
 * [[hog]]
 
 =====Hyponyms=====
-* [[boar]], [[herd boar]]
-* [[sow]], [[brood sow]]
-* [[piglet]]
+* [[boar]], [[herd boar]]; [[sow]], [[brood sow]]; [[piglet]], [[piggy]]
+
+=====Derived terms=====
+{{rel-top|terms derived from the noun "pig"}}
+* [[blind pig]]
+* [[bush pig]]
+* [[dish pig]]
+* [[eat like a pig]]
+* [[flying pig]]
+* [[guinea pig]]
+* [[happy as a pig in shit]]
+* [[if pigs had wings]]
+* [[in a pig's eye]]
+* [[pig bed]]
+* [[pigface]]
+* [[piggery]]
+* [[piggish]]
+{{mid3}}
 * [[piggy]]
+* [[piggy bank]]
+* [[piggyback]]
+* [[pigheaded]]
+* [[pig in a blanket]]
+* [[pig in a poke]]
+* [[pig iron]]
+* [[pig it]]
+* [[pig Latin]]
+* [[pig lead]]
+* [[piglet]]
+{{mid3}}
+* [[pig-out]]
+* [[pig out]]
+* [[pigpen]]
+* [[pigskin]]
+* [[pigsty]]
+* [[pigtail]]
+* [[pigweed]]
+* [[potbellied pig]]
+* [[suckling pig]]
+* [[sweat like a pig]]
+* [[when pigs fly]]
+* [[whistle pig]]
+* [[year of the pig]]
+{{rel-bottom}}
 
 =====Translations=====
 {{trans-top|mammal of genus ''Sus''}}
@@ -333,48 +369,9 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * {{ttbc|sdc}}: [[porcu]] {{m}}, [[mannale]] {{m}}, [[sue]] {{f}}
 {{trans-bottom}}
 
-=====Derived terms=====
-{{rel-top|terms derived from the noun "pig"}}
-* [[blind pig]]
-* [[bush pig]]
-* [[dish pig]]
-* [[eat like a pig]]
-* [[flying pig]]
-* [[guinea pig]]
-* [[happy as a pig in shit]]
-* [[if pigs had wings]]
-* [[in a pig's eye]]
-* [[pig bed]]
-* [[pigface]]
-* [[piggery]]
-* [[piggish]]
-{{mid3}}
-* [[piggy]]
-* [[piggy bank]]
-* [[piggyback]]
-* [[pigheaded]]
-* [[pig in a blanket]]
-* [[pig in a poke]]
-* [[pig iron]]
-* [[pig it]]
-* [[pig Latin]]
-* [[pig lead]]
-* [[piglet]]
-{{mid3}}
-* [[pig-out]]
-* [[pig out]]
-* [[pigpen]]
-* [[pigskin]]
-* [[pigsty]]
-* [[pigtail]]
-* [[pigweed]]
-* [[potbellied pig]]
-* [[suckling pig]]
-* [[sweat like a pig]]
-* [[when pigs fly]]
-* [[whistle pig]]
-* [[year of the pig]]
-{{rel-bottom}}
+=====Descendants=====
+* Abenaki: {{l|abe|piks}} {{qualifier|from "pigs"}}
+* Malecite-Passamaquoddy: {{l|pqm|piks}} {{qualifier|from "pigs"}}
 
 ====Verb====
 {{en-verb|pigs|pigging|pigged|pigged}}
