/* Noun */ {{rfv-sense}} ethnic slur <cop#19696598>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -56,7 +56,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 {{en-noun}}
 
 # {{slang|law enforcement}} A [[police officer]] or [[prison guard]].
-# {{slang|offensive|AAVE|ethnic slur|by extension}} Any white male, especially large and clean shaven.
+# {{rfv-sense}} {{slang|offensive|AAVE|ethnic slur|by extension}} Any white male, especially large and clean shaven.
 
 =====Synonyms=====
 * See also [[Wikisaurus:police officer]]
