/* Anagrams */[[Category:English plurals ending in "-ies"]] using [[Project:AWB|AWB]] <allegories#19708793>

--- a/en/a/allegories.856168.wikitext
+++ b/en/a/allegories.856168.wikitext
@@ -8,6 +8,8 @@
 ===Anagrams===
 * [[allegorise#English|allegorise]]
 
+[[Category:English plurals ending in "-ies"]]
+
 [[ar:allegories]]
 [[de:allegories]]
 [[eo:allegories]]
