/* Anagrams */[[Category:English plurals ending in "-ies"]] using [[Project:AWB|AWB]] <amnesties#19708843>

--- a/en/a/amnesties.856191.wikitext
+++ b/en/a/amnesties.856191.wikitext
@@ -8,6 +8,8 @@
 ===Anagrams===
 * [[meatiness#English|meatiness]]
 
+[[Category:English plurals ending in "-ies"]]
+
 [[ar:amnesties]]
 [[et:amnesties]]
 [[fr:amnesties]]
