t+fa:[[بیشینه]] t+fa:[[ماکزیمم]] ([[WT:EDIT|Assisted]]) <maximum#19711732>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -44,6 +44,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 {{trans-mid}}
 * Japanese: {{t+|ja|最大|tr=さいだい, saidai|sc=Jpan}}, {{t-|ja|極大|tr=きょくだい, kyokudai|sc=Jpan}}
 * Latin: {{t-|la|maximum}}
+* Persian: {{t|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t|fa|ماکزیمم|tr=mâkzimom|sc=fa-Arab}}
 * Portuguese: {{t+|pt|máximo|m}}
 * Romanian: {{t-|ro|maximum}}
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
@@ -60,6 +61,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 * German: {{t+|de|Maximum|n}}
 {{trans-mid}}
 * Italian: {{t+|it|massimo|m}}
+* Persian: {{t|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t|fa|ماکزیمم|tr=mâkzimom|sc=fa-Arab}}
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 * Spanish: {{t+|es|máximo}}
 * Telugu: [[గరిష్ఠం]] (garishThaM)
@@ -68,6 +70,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 {{trans-top|statistics: largest value of a batch}}
 * Finnish: {{t-|fi|maksimiarvo}}, {{t-|fi|suurin}} {{t+|fi|arvo}}
 {{trans-mid}}
+* Persian: {{t|fa|ماکزیمم|tr=mâkzimom|sc=fa-Arab}}
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 {{trans-bottom}}
 
