t+sv:[[lufta]] ([[WT:EDIT|Assisted]]) <bleed#19745230>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -131,6 +131,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} {{r
 * Finnish: {{t+|fi|ilmata}}
 {{trans-mid}}
 * Spanish: {{t-|es|purgar}}
+* Swedish: {{t|sv|lufta}}
 {{trans-bottom}}
 
 {{checktrans-top}}
